# needs

./: CHANGELOG.md  Cargo.toml  HOMEBREW.md  HOMEBREW_SUMMARY.md  INSTALL.md  README.md  bacon.toml  demo.cast  justfile  needs-advanced.rb  needs-release.rb  needs.rb  needsfile  notes.md  report.md  test-formula.sh  test_script.sh  todo.md
.github/workflows/: release-plz.yml  rust.yml
needsfiles/builtins/: needsfile
needsfiles/collection/: needsfile
needsfiles/never_present/: needsfile
src/: binary.rs  cli.rs  discovery.rs  error.rs  grammar.pest  io.rs  logging.rs  main.rs  output.rs  parser.rs  versions.rs
