[package]
name = "needs"
description = "Check if given bin(s) are available in the PATH"
version = "0.5.1"
edition = "2024"
authors = ["Noah <noahbuergler@proton.me>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NQMVD/needs"
documentation = "https://docs.rs/needs"
keywords = ["cli"]
categories = ["command-line-utilities"]

[features]
default = ["version-retrieval"]
version-retrieval = [
  "dep:rayon",
  "dep:regex",
  "dep:xshell",
  "dep:once_cell",
  "clap/suggestions",
]

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
clap-cargo = "0.15.2"
termcolor = "1.4.1"
which = { version = "7.0.3", features = ["tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
anyhow = "1.0.98"
colored = "3.0.0"
beef = "0.5.2"
fern = { version = "0.7.1", features = ["colored"] }
log = { version = "0.4.27", features = ["kv"] }
chrono = "0.4.41"
atty = "0.2.14"

# Optional dependencies for version-retrieval
rayon = { version = "1.10.0", optional = true }
regex = { version = "1.11.0", optional = true }
xshell = { version = "0.2.7", optional = true }
once_cell = { version = "1.21.3", optional = true }
semver = "1.0.26"

[profile.dev]
split-debuginfo = "unpacked"
debug = 1
